# exp

./: .gitignore  Dockerfile  Jenkinsfile  README.md  TestScript.gscript  docker-compose.yml  pom.xml
.run/: AccessingDataJpaApplication.run.xml  CrudWithVaadinApplication.run.xml  resume_review.run.xml
autogen/: autogen-battle.py  output-testing.py  requirements-autogen.txt
backend/: .project  Dockerfile  README.md  pom.xml
chrome-plugins-first-test/: readme.md
crewai/: presentation.md
crewai/food_planner/: README.md  instructions.md  pyproject.toml
crewai/food_planner/src/food_planner/: crew.py  main.py
crewai/food_planner/src/food_planner/tools/: Perplexity.py
crewai/realestate/: README.md  instructions.md  pyproject.toml  readme.md  requirements.txt
crewai/realestate/logs/: cli.logs
crewai/realestate/src/realestate/: crew.py  main.py
crewai/realestate/src/realestate/config/: agents.yaml  tasks.yaml
crewai/realestate/src/realestate/tools/: Perplexity.py  scrape_website.py
crewai/resume_reviewer/: README.md  interview_materials.md  pyproject.toml  tailored_resume.md
crewai/resume_reviewer/src/resume_reviewer/: crew.py  main.py
crewai/resume_reviewer/src/resume_reviewer/config/: agents.yaml  tasks.yaml  utils.py
crewai/resume_reviewer/src/resume_reviewer/data/: resume.md
crewai/resume_reviewer/src/resume_reviewer/tools/: word2markdown.py
friends/: README.md  friends.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
goland-tutorials/: README.md  hello-world.go  variables.go
golang-package/: main.go
golang-web-scraper/: README.md  (+6 more)
(+134 files in other folders)
