[tool.poetry]
name = "food_planner"
version = "0.1.0"
description = "food-planner using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
food_planner = "food_planner.main:run"
train = "food_planner.main:train"
replay = "food_planner.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
