[tool.poetry]
name = "realestate"
version = "0.1.0"
description = "realestate using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
realestate = "realestate.main:run"
train = "realestate.main:train"
replay = "realestate.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
