[tool.poetry]
name = "resume_reviewer"
version = "0.1.0"
description = "resume-reviewer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
resume_reviewer = "resume_reviewer.main:run"
train = "resume_reviewer.main:train"
replay = "resume_reviewer.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
